oxker-tui/tests/snapshots/comprehensive_snapshot_tests__logs_empty.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&logs_panel, &props, 80, 15)"
---
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                 no logs found                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
