oxker-tui/tests/snapshots/comprehensive_snapshot_tests__logs_stopped.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&logs_panel, &props, 80, 10)"
---
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│→ Container stopped.                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
