oxker-tui/tests/snapshots/comprehensive_snapshot_tests__ports_empty.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&ports_panel, &props, 60, 8)"
---

