oxker-tui/tests/snapshots/comprehensive_snapshot_tests__ports_multiple.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&ports_panel, &props, 70, 10)"
---
╭────────────────────────────── ports ───────────────────────────────╮
│        ip   private   public                                       │
│   0.0.0.0        80     8080                                       │
│   0.0.0.0       443     8443                                       │
│                3306                                                │
│ 127.0.0.1      5432     5432                                       │
│                                                                    │
│                                                                    │
│                                                                    │
╰────────────────────────────────────────────────────────────────────╯
