oxker-tui/tests/snapshots/comprehensive_snapshot_tests__ports_single.snap
---
source: oxker-tui/tests/comprehensive_snapshot_tests.rs
expression: "render_component(&ports_panel, &props, 60, 8)"
---
╭───────────────────────── ports ──────────────────────────╮
│        ip   private   public                             │
│   0.0.0.0        80     8080                             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
